# libodb

./: CMakeLists.txt
odb/: CMakeLists.txt
odb/details/: config.h  config.hxx
